--- a/package.json
+++ b/package.json
@@ -67,64 +67,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.0",
-    "@angular/cdk": "^7.2.1",
-    "@angular/common": "^7.2.0",
-    "@angular/compiler": "^7.2.0",
-    "@angular/core": "^7.2.0",
-    "@angular/flex-layout": "^7.0.0-beta.23",
-    "@angular/forms": "^7.2.0",
-    "@angular/http": "^7.2.0",
-    "@angular/material": "^7.2.1",
-    "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/router": "^7.2.0",
-    "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-brands-svg-icons": "^5.6.3",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@ngx-progressbar/core": "^5.3.1",
-    "@ngx-progressbar/http": "^5.3.1",
-    "@ngx-progressbar/router": "^5.3.1",
-    "@ngx-pwa/local-storage": "^7.4.0",
-    "core-js": "^2.5.4",
+    "@angular/animations": "^9.1.0",
+    "@angular/cdk": "^9.2.0",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/forms": "^9.1.0",
+    "@angular/material": "^9.2.0",
+    "@angular/platform-browser": "^9.1.0",
+    "@angular/platform-browser-dynamic": "^9.1.0",
+    "@angular/router": "^9.1.0",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@ngx-progressbar/core": "^5.3.2",
+    "@ngx-progressbar/http": "^5.3.2",
+    "@ngx-progressbar/router": "^5.3.2",
+    "@ngx-pwa/local-storage": "^9.0.3",
+    "core-js": "^3.6.4",
     "hammerjs": "^2.0.8",
-    "highlight.js": "^9.13.1",
-    "ngx-highlightjs": "^3.0.0",
-    "ngx-scrollbar": "^4.1.1",
-    "normalize.css": "^8.0.0",
-    "rxjs": "^6.3.3",
-    "zone.js": "^0.8.27"
+    "highlight.js": "^9.18.1",
+    "ngx-highlightjs": "^4.1.0-beta",
+    "ngx-scrollbar": "^7.2.1-beta.0",
+    "normalize.css": "^8.0.1",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.11.1",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.4",
-    "@angular-devkit/build-ng-packagr": "~0.10.4",
-    "@angular/cli": "^7.2.1",
-    "@angular/compiler-cli": "^7.2.0",
-    "@angular/language-service": "^7.2.0",
-    "@compodoc/compodoc": "^1.1.7",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.12.2",
-    "ansi-colors": "^3.1.0",
-    "codelyzer": "~4.5.0",
-    "cssnano": "^4.1.4",
-    "jasmine-core": "~3.3.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.4",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^1.3.1",
-    "ng-packagr": "4.5.0",
-    "node-sass": "^4.10.0",
+    "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/build-ng-packagr": "~0.901.0",
+    "@angular/cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
+    "@angular/language-service": "^9.1.0",
+    "@compodoc/compodoc": "^1.1.11",
+    "@types/jasmine": "~3.5.10",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^13.9.5",
+    "ansi-colors": "^4.1.1",
+    "codelyzer": "^5.2.2",
+    "cssnano": "^4.1.10",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.1",
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "ng-packagr": "^9.1.0",
+    "node-sass": "^4.13.1",
     "postcss-strip-inline-comments": "^0.1.5",
-    "protractor": "~5.4.1",
+    "protractor": "~5.4.3",
     "replace-ext": "^1.0.0",
-    "ts-node": "~7.0.1",
-    "tsickle": "^0.34.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "ts-node": "~8.8.1",
+    "tslint": "~6.1.0",
+    "typescript": "~3.7.5"
   }
 }
